--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
  <html>
+
+
    <head>
      <meta charset="utf-8" />
      <title>Google News Template</title>
@@ -7,12 +9,17 @@
      <meta name="viewport" content="width=device-width" />
      <div class="header">
        <div class="sides">
-         <a href="#" class="logo">NEWS</a>
+         <div class ="tech">
+         <a href="#" class="logo" class="tech" id= "techLinkDiv">TECH</a></div>
+         <div class = "science">
+         <a href="#" class="logo" class="science" id= "scienceLinkDiv">SCIENCE</a></div>
+         <div class ="travel"><a href="#" class="logo" id= "travelLinkDiv">TRAVEL</a>
+         </div>
        </div>
        <div class="sides"> <a href="#" class="menu">-</a></div>
        <div class="info">
        <h4><a href="#category">Tech</a></h4>
-         <h1>TECH NEWS FROM AROUND THE GLOBE</h1>
+         <div class ="heading"><h1> HEJ</h1> </div>
          <div class="meta">
 
            By <a href="https://media.giphy.com/media/kudIERso2pFiE/giphy.gif" target="_b">Charlotta Nilsson</a> on June 16, 2018
@@ -26,11 +33,14 @@
    <body>
      <div class="categories">
        <div class="tech">
-         <button id= "techLinkDiv"> "Go to Tech" </button>
+
          </div>
          <div class="travel">
-           <button id="travelLinkDiv"> "Go to Travel" </button>
+
            </div>
+           <div class="science">
+
+             </div>
        </div>
      <div class="largeArticle">
        </div>
