--- a/index.html
+++ b/index.html
@@ -13,16 +13,19 @@
          <a href="#" class="logo" class="tech" id= "techLinkDiv">TECH</a></div>
          <div class = "science">
          <a href="#" class="logo" class="science" id= "scienceLinkDiv">SCIENCE</a></div>
+         <div class="food">
+<a href="#" class="logo" class="food" id= "foodLinkDiv">FOOD</a>
+           </div>
          <div class ="travel"><a href="#" class="logo" id= "travelLinkDiv">TRAVEL</a>
          </div>
        </div>
        <div class="sides"> <a href="#" class="menu">-</a></div>
        <div class="info">
-       <h4><a href="#category">Tech</a></h4>
-         <div class ="heading"><h1> HEJ</h1> </div>
+       <h4><a href="#category">the latest</a></h4>
+         <div class ="heading"><h1> NEWS</h1> </div>
          <div class="meta">
 
-           By <a href="https://media.giphy.com/media/kudIERso2pFiE/giphy.gif" target="_b">Charlotta Nilsson</a> on June 16, 2018
+           By <a href="https://media.giphy.com/media/kudIERso2pFiE/giphy.gif" target="_b">Charlotta</a> 2018
          </div>
        </div>
      </div>
@@ -41,6 +44,9 @@
            <div class="science">
 
              </div>
+             <div class="food">
+
+               </div>
        </div>
      <div class="largeArticle">
        </div>
